Updated `tsconfig.node.json`: included `.vueless/**/*` in `exclude` array for improved configuration management.

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,8 @@
     "vueless.config.*",
     "cypress.config.*",
     "nightwatch.conf.*",
-    "playwright.config.*"
+    "playwright.config.*",
+    ".vueless/**/*"
   ],
   "compilerOptions": {
     "module": "ESNext",
