Update tsconfig.app.json: remove test directory from included files and simplify exclusion rules

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,9 +3,8 @@
     "env.d.ts",
     "src/**/*",
     "src/**/*.vue",
-    "test/**/*"
   ],
-  "exclude": ["src/**/__tests__/*", "dist/**/*"],
+  "exclude": ["dist/**/*"],
   "compilerOptions": {
     /* General */
     "module": "ESNext",
