--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
-    "cva": "^1.0.0-beta.3",
+    "cva": "^1.0.0-beta.4",
     "lodash-es": "^4.17.21",
     "svgo": "^4.0.0",
     "tailwind-merge": "^3.3.1",
@@ -74,7 +74,7 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
-    "@vueless/storybook": "^1.0.1-beta.1",
+    "@vueless/storybook": "^1.1.0",
     "eslint": "^9.32.0",
     "eslint-plugin-storybook": "^9.0.18",
     "eslint-plugin-vue": "^10.3.0",
