--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vueless",
-  "version": "1.1.0",
+  "version": "1.1.1-beta.0",
   "license": "MIT",
   "description": "Vue Styleless UI Component Library, powered by Tailwind CSS.",
   "keywords": [
