Add `src/bin/constants.js` to `tsconfig.build.json` include paths for build configuration

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.app.json",
-  "include": ["src/constants.js", "src/utils/node/*.js"],
+  "include": ["src/constants.js", "src/bin/constants.js", "src/utils/node/*.js"],
   "exclude": [],
   "compilerOptions": {
     "allowJs": true,
