--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,11 +1,13 @@
 {
   "extends": "./tsconfig.app.json",
-  "include": ["src/constants.js", "src/bin/constants.js", "src/utils/node/*.js"],
-  "exclude": [],
+  "include": ["dist/constants.js", "dist/utils/node/*.js"],
+  "exclude": ["src/**/*.d.ts"],
   "compilerOptions": {
     "allowJs": true,
+    "noEmit": false,
     "declaration": true,
     "emitDeclarationOnly": true,
-    "outDir": "./dist",
+    "rootDir": "./dist",
+    "outDir": "./dist"
   }
 }
