Update `tsconfig.build.json` to include `dist/bin/constants.js` in build paths

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.app.json",
-  "include": ["dist/constants.js", "dist/utils/node/*.js"],
+  "include": ["dist/constants.js", "dist/bin/constants.js", "dist/utils/node/*.js"],
   "exclude": ["src/**/*.d.ts"],
   "compilerOptions": {
     "allowJs": true,
