Update package.json: add "sideEffects" field to optimize tree-shaking

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "vue-router": "^4.5.1",
     "vue-tsc": "^3.0.4"
   },
+  "sideEffects": false,
   "style": "tailwind.css",
   "types": "index.d.ts",
   "main": "index.ts",
