--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "@tailwindcss/vite": "^4.1.11",
     "cva": "^1.0.0-beta.4",
     "lodash-es": "^4.17.21",
+    "sortablejs": "^1.15.6",
     "svgo": "^4.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tippy.js": "^6.3.7",
-    "unplugin-vue-components": "^28.8.0",
-    "vuedraggable": "4.1.0"
+    "unplugin-vue-components": "^28.8.0"
   },
   "devDependencies": {
     "@material-symbols/svg-500": "^0.33.0",
@@ -49,6 +49,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.1.0",
+    "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/eslint-plugin": "^1.3.4",
     "@vue/eslint-config-prettier": "^10.2.0",
