Updated `.gitignore` and `tsconfig.app.json`: added `.tsbuildinfo` exclusion and enforced stricter module settings

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,6 +27,8 @@
     /* Enables all strict type-checking options. */
     "strict": true,
     "noImplicitThis": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
 
     /* Bundlers settings */
     "moduleResolution": "bundler",
