--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "release:patch": "release-it patch --ci --npm.publish --git.tag --github.release",
     "release:minor": "release-it minor --ci --npm.publish --git.tag --github.release",
     "release:major": "release-it major --ci --npm.publish --git.tag --github.release",
-    "lint": "eslint --no-fix src/ .storybook/",
-    "lint:fix": "eslint --fix src/ .storybook/",
+    "lint": "eslint --no-fix src/ test/ .storybook/ .vueless/",
+    "lint:fix": "eslint --fix src/ test/ .storybook/ .vueless/",
     "lint:ci": "eslint --no-fix --max-warnings=0",
     "test": "vitest",
     "test:ci": "vitest --run"
