--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,7 @@
   "include": [
     "env.d.ts",
     "src/**/*",
-    "src/**/*.vue",
+    "src/**/*.vue"
   ],
   "exclude": ["dist/**/*.d.ts"],
   "compilerOptions": {
