--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "access": "public"
   },
   "scripts": {
-    "prepare": "ln -s ../src ./node_modules/vueless",
-    "dev:docs": "npm run prepare && storybook dev -p 6006 --docs --no-open",
-    "dev": "npm run prepare && storybook dev -p 6006 --no-open",
-    "build": "npm run prepare && storybook build --docs",
+    "link:package": "ln -s ../src ./node_modules/vueless",
+    "dev:docs": "npm run link:package && storybook dev -p 6006 --docs --no-open",
+    "dev": "npm run link:package && storybook dev -p 6006 --no-open",
+    "build": "npm run link:package && storybook build --docs",
     "preview": "vite preview --host --outDir=storybook-static",
     "ts:check": "vue-tsc --build --force",
     "release:icons": "npx node .scripts/icons",
