--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "access": "public"
   },
   "scripts": {
-    "link:package": "ln -s ../src ./node_modules/vueless",
+    "link:package": "rm -rf node_modules/vueless && ln -s ../src ./node_modules/vueless",
     "dev:docs": "npm run link:package && storybook dev -p 6006 --docs --no-open",
     "dev": "npm run link:package && storybook dev -p 6006 --no-open",
     "build": "npm run link:package && storybook build --docs",
