Extended `.editorconfig` to include CSS files.

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-[*.{js,jsx,mjs,cjs,ts,tsx,mts,cts,vue,html}]
+[*.{js,jsx,mjs,cjs,ts,tsx,mts,cts,vue,html,css}]
 charset = utf-8
 insert_final_newline = true
 indent_style = space
