--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,3 +79,34 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  release-nuxt:
+    name: 'Release: Nuxt Module'
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.ORG_PA_TOKEN }}
+          repository: vuelessjs/vueless-module-nuxt
+          event-type: vueless-release
+          client-payload: '{"release_type": "${{ github.event.inputs.release_type }}"}'
+
+  update-beta:
+    name: 'Update Beta'
+    needs: release-nuxt
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+      - run: |
+          git fetch origin beta
+          git checkout beta
+          git merge origin/main --no-edit -m "Merge main into beta [skip ci]" || echo "Merge conflict, needs manual resolution"
+          git push origin beta
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
