--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,6 @@ jobs:
 
   ts-check:
     name: 'TS Check'
-    needs: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -44,7 +43,6 @@ jobs:
   test:
     name: 'Test'
     if: "github.ref_name == 'main'"
-    needs: ts-check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -58,7 +56,7 @@ jobs:
   release:
     name: "Release: ${{ github.event.inputs.release_type }}"
     if: github.ref_name == 'main'
-    needs: test
+    needs: [lint, ts-check, test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
