--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -22,7 +22,6 @@ jobs:
 
   ts-check:
     name: 'TS Check'
-    needs: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -36,7 +35,6 @@ jobs:
   test:
     name: 'Test'
     if: "!contains(github.event.head_commit.message, 'GITBOOK')"
-    needs: ts-check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -50,7 +48,7 @@ jobs:
   release-beta:
     name: 'Release: beta'
     if: "!contains(github.event.head_commit.message, 'GITBOOK')"
-    needs: test
+    needs: [lint, ts-check, test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
