--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -59,8 +59,7 @@ jobs:
           node-version: 22
           cache: 'npm'
           registry-url: https://registry.npmjs.org/
-      - name: git config
-        run: |
+      - run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
       - run: npm ci
