--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,8 +67,7 @@ jobs:
           node-version: 22
           cache: 'npm'
           registry-url: https://registry.npmjs.org/
-      - name: git config
-        run: |
+      - run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
       - run: npm ci
@@ -90,9 +89,24 @@ jobs:
           event-type: vueless-release
           client-payload: '{"release_type": "${{ github.event.inputs.release_type }}"}'
 
+  update-quickstart:
+    name: 'Update: Quickstart Templates'
+    needs: release
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        repo: [ 'vuelessjs/vueless-quickstart', 'vuelessjs/vueless-quickstart-ts' ]
+    steps:
+      - uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.ORG_PA_TOKEN }}
+          repository: ${{ matrix.repo }}
+          event-type: vueless-release
+          client-payload: '{"release_type": "${{ github.event.inputs.release_type }}"}'
+
   update-beta:
     name: 'Update Beta'
-    needs: release-nuxt
+    needs: release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -101,7 +115,6 @@ jobs:
       - run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-      - run: |
           git fetch origin beta
           git checkout beta
           git merge origin/main --no-edit -m "Merge main into beta [skip ci]" || echo "Merge conflict, needs manual resolution"
