--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "release:icons": "npx node .scripts/icons",
     "release:types": "rm -f ./node_modules/.tmp/tsconfig.app.tsbuildinfo && npx tsc --project tsconfig.build.json",
     "release:prepare": "npm run release:icons && rm -rf dist && mkdir -p dist && cp -r src/. package.json LICENSE README.md dist/ && npx node .scripts/writeLocales && npm run release:types",
-    "release:beta": "release-it --ci --npm.publish --preRelease=beta --increment=prerelease --no-plugins.@release-it/conventional-changelog",
-    "release:patch": "release-it patch --ci --npm.publish --git.tag --github.release",
-    "release:minor": "release-it minor --ci --npm.publish --git.tag --github.release",
-    "release:major": "release-it major --ci --npm.publish --git.tag --github.release",
+    "release:beta": "release-it --increment=prerelease --preRelease=beta --ci --no-git.tag --no-github.release",
+    "release:patch": "release-it patch --ci",
+    "release:minor": "release-it minor --ci",
+    "release:major": "release-it major --ci",
     "lint": "eslint --no-fix src/ test/ .storybook/ .vueless/ .scripts/",
     "lint:fix": "eslint --fix src/ test/ .storybook/ .vueless/ .scripts/",
     "lint:ci": "eslint --no-fix --max-warnings=0",
