--- a/.release-it.json
+++ b/.release-it.json
@@ -24,9 +24,13 @@
         "name": "conventionalcommits",
         "types": [
           { "type": "feat", "section": "✨ Features" },
-          { "type": "fix", "section": "🐛 Fixes" },
+          { "type": "fix", "section": "🐛 Bug Fixes" },
           { "type": "perf", "section": "🚀 Performance" }
         ]
+      },
+      "writerOpts": {
+        "noteGroupTitle": "🚨 Breaking Changes",
+        "groupBy": "section"
       }
     }
   },
