chore: fixed changelog titles generation

--- a/.release-it.json
+++ b/.release-it.json
@@ -29,8 +29,8 @@
         ]
       },
       "writerOpts": {
-        "noteGroupTitle": "🚨 Breaking Changes",
-        "groupBy": "section"
+        "noteGroupsSort": "title",
+        "noteGroupTitle": "🚨 Breaking Changes"
       }
     }
   },
