--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Release Workflow
 
 on:
   workflow_dispatch:
@@ -13,13 +13,15 @@ on:
           - major
   push:
     branches: [ beta ]
+  pull_request:
+    types: [ opened, synchronize, reopened ]
 
 permissions: write-all
 
 jobs:
   lint:
     name: 'Lint'
-    if: "github.event_name != 'push' || !contains(github.event.head_commit.message, 'GITBOOK')"
+    if: "!contains(github.event.head_commit.message, 'GITBOOK')"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -32,7 +34,7 @@ jobs:
 
   ts-check:
     name: 'TS Check'
-    if: "github.event_name != 'push' || !contains(github.event.head_commit.message, 'GITBOOK')"
+    if: "!contains(github.event.head_commit.message, 'GITBOOK')"
 
     runs-on: ubuntu-latest
     steps:
@@ -46,7 +48,7 @@ jobs:
 
   test:
     name: 'Test'
-    if: "github.event_name != 'push' || !contains(github.event.head_commit.message, 'GITBOOK')"
+    if: "!contains(github.event.head_commit.message, 'GITBOOK')"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -56,6 +58,35 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run test:ci
+
+  release-beta:
+    name: 'Release: beta'
+    if: "github.event_name == 'push' && github.ref_name == 'beta'"
+    needs: [ lint, ts-check, test ]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'npm'
+          registry-url: https://registry.npmjs.org/
+      - run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+      # OIDC requires npm v11.5.1 or later.
+      # Node.js v20 comes with v10.8, so we need to update it:
+      - run: npm install -g npm@latest
+      - run: npm ci
+      - run: npm run release:prepare
+      - run: npm run release:beta
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   release:
     name: "Release: ${{ github.event.inputs.release_type }}"
@@ -83,35 +114,6 @@ jobs:
       - run: npm ci
       - run: npm run release:prepare
       - run: npm run release:${{ github.event.inputs.release_type }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  release-beta:
-    name: 'Release: beta'
-    if: "github.event_name == 'push' && github.ref_name == 'beta'"
-    needs: [lint, ts-check, test]
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      id-token: write
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: 'npm'
-          registry-url: https://registry.npmjs.org/
-      - run: |
-          git config user.name "${GITHUB_ACTOR}"
-          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-      # OIDC requires npm v11.5.1 or later.
-      # Node.js v20 comes with v10.8, so we need to update it:
-      - run: npm install -g npm@latest
-      - run: npm ci
-      - run: npm run release:prepare
-      - run: npm run release:beta
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
