--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
-    "@vueless/storybook": "^1.2.8",
+    "@vueless/storybook": "^1.2.10-beta.7",
     "eslint": "^9.32.0",
-    "eslint-plugin-storybook": "^9.0.18",
+    "eslint-plugin-storybook": "^10.0.2",
     "eslint-plugin-vue": "^10.3.0",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
