--- a/package.json
+++ b/package.json
@@ -98,6 +98,10 @@
     "./composables/*": "./composables/*",
     "./constants": "./constants.js",
     "./constants.js": "./constants.js",
+    "./components": {
+      "import": "./components.ts",
+      "types": "./components.d.ts"
+    },
     "./plugin-vite": "./plugin-vite.js",
     "./plugin-vite.js": "./plugin-vite.js",
     "./storybook": "./utils/node/storybook.js",
