--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,6 +88,18 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  release-nuxt-beta:
+    name: 'Release: Nuxt Module: beta'
+    if: "github.event_name == 'push' && github.ref_name == 'beta'"
+    needs: [ release-beta ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.ORG_PA_TOKEN }}
+          repository: vuelessjs/vueless-module-nuxt
+          event-type: vueless-release-beta
+
   release:
     name: "Release: ${{ github.event.inputs.release_type }}"
     if: github.event_name == 'workflow_dispatch' && github.ref_name == 'main'
