--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,7 @@
   for = "/*"
   [headers.values]
     cache-control = "public, max-age=31536000, immutable"
+
+[build]
+  publish = "storybook-static"
+  command = "npm run build"
